--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div class="bounce3"></div>
         </div>
     </div>
-    <!-- End of preloader -->
+    <!-- end of preloader -->
     
 
     <!-- Navigation -->
